<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/indietro"
                android:text="indietro"
                />-->
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

            <TextView
                android:id="@+id/uniBroken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/unibroken"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="254dp"
                android:layout_height="165dp"
                android:layout_gravity="center"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="35dp"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/invia"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="74dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/invia_segnalazione" />

            <Button
                android:id="@+id/mostra"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_margin="15dp"
                android:text="@string/mostra_segnalazioni" />

            <Button
                android:id="@+id/visualizzaMieSegnalazioni"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_margin="15dp"
                android:baselineAligned="false"
                android:text="@string/le_mie_segnalazioni" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>